# mfm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  default.nix  example_config.yaml  flake.nix  test_config.yaml  test_config.yml
.github/workflows/: checks.yml  release.yml
docs/proposals/: 2023-10-05-proposal-v0.2.md
mfm_cli/: Cargo.toml
mfm_cli/src/: lib.rs  main.rs  telemetry.rs
mfm_core/: Cargo.toml  test_config.yml
mfm_core/src/: lib.rs
mfm_core/src/config/: dexes.rs  mod.rs  network.rs  token.rs
mfm_core/src/config/authentication/: mod.rs  wallet.rs
mfm_core/src/contexts/: mod.rs
mfm_core/src/hidden/: mod.rs
mfm_core/src/password/: mod.rs
mfm_core/src/states/: mod.rs
mfm_machine/: Cargo.toml
mfm_machine/mfm_machine_macros/src/: lib.rs
mfm_machine/src/: lib.rs
mfm_machine/src/state/: context.rs  mod.rs  state_machine.rs  states.rs
mfm_machine/src/state_machine/: mod.rs  tracker.rs
mfm_machine/tests/: default_impls.rs  n_states_with_n_ctxs.rs  public_api_test.rs  retry_workflow_state_machine.rs  retry_workflow_state_machine_test.rs
mfm_machine_derive/: Cargo.toml
mfm_machine_derive/mfm_machine_macros/: Cargo.toml
mfm_machine_derive/mfm_machine_macros/src/: lib.rs
res/assets/: erc20_abi.json
res/assets/bsc/anonq/: abi.json
res/assets/bsc/pancake_swap_v2/busd/: abi.json
res/assets/bsc/pancake_swap_v2/safemoon/: abi.json
res/assets/bsc/posi/: abi.json
res/exchanges/: uniswap_v2_pair_abi.json
res/exchanges/pancake_swap_v2/: abi.json
res/yield_farms/pacoca_vault/: abi.json
res/yield_farms/posi_generaral_nft_reward_v2/: abi.json
res/yield_farms/position_stake_manager/: abi.json
src/: lib.rs  main.rs  signing.rs  telemetry.rs
src/_rebalancer/: mod.rs
src/allowance/: cmd.rs  mod.rs
src/approve/: cmd.rs  mod.rs
src/approve_all/: cmd.rs  mod.rs
src/asset/: config.rs  mod.rs
src/balances/: cmd.rs  mod.rs
src/cmd/: allowance.rs  approve.rs  balances.rs  enc.rs  helpers.rs  mod.rs  quote.rs  quoteold.rs  rebalancer.rs  swap.rs  track.rs  transaction.rs  unwrap.rs  withdraw.rs  wrap.rs  yield_farm.rs
src/config/: asset.rs  decrypt_wallet.rs  exchange.rs  mod.rs  network.rs  rebalancer.rs  route.rs  wallet.rs  withdraw_wallet.rs  yield_farm.rs
src/config/exchange/: swap_eth_for_tokens.rs  swap_tokens_for_tokens.rs
src/config/rebalancer/: mod.rs
src/config/yield_farm/: baby_auto_baby_pool.rs  pacoca_auto_pool.rs  pacoca_vault.rs  pancake_swap_auto_cake_pool.rs  posi_farm_bnb_posi.rs  posi_farm_busd_posi.rs  posi_nft_pool.rs  posi_smartchief.rs  position_stake_manager.rs  qi_dao_staking_pool.rs  qi_dao_staking_pool_qi_wmatic.rs
src/encrypt/: cmd.rs  mod.rs
src/exchange/: config.rs  mod.rs  swap_eth_for_tokens.rs  swap_tokens_for_tokens.rs
src/notification/: config.rs  debug.rs  mod.rs  telegram.rs
src/quote/: cmd.rs  mod.rs
src/rebalancer/: cmd.rs  config.rs  mod.rs
src/shared/: blockchain_utils.rs  mod.rs  resources.rs  scalar.rs
src/swap/: cmd.rs  mod.rs
src/track/: cmd.rs  mod.rs
src/unwrap/: cmd.rs  mod.rs
src/utils/: blockchain.rs  hidden.rs  math.rs  mod.rs  password.rs  resources.rs  scalar.rs
src/watcher/: cmd.rs  mod.rs
src/withdraw/: cmd.rs  mod.rs
src/wrap/: cmd.rs  mod.rs
tests/: common.rs  network.rs
tests/blockchains/gethnet/: Dockerfile  genesis.json
tests/blockchains/gethnet/data/keystore/: UTC--2023-03-28T01-13-34.803419000Z--4e22e05c29a7165aeee0d813be03af17f129a2d1
