[package]
name = "mfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
rustc-hex = "2.1.0"
tokio = { version = "1.17.0", features = ["full"] }
secp256k1 =  "0.21.3" # this version is a dependency for web3
web3 = { version = "0.18.0" }
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.14"
prettytable-rs = "^0.8"
once_cell = "1.10.0"
num-bigint = "0.4"
