[package]
name = "mfm"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive", "cargo"] }
serde_yaml = "0.8"
serde_json = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
rustc-hex = "2.1.0"
tokio = { version = "1.17.0", features = ["full"] }
# TODO: upgrade and use as: https://github.com/graphprotocol/solidity-bindgen/blob/master/solidity-bindgen/src/secrets.rs
secp256k1 =  "0.21.3" # this version is a dependency for web3
web3 = { version = "0.18.0" }
futures = "0.3.21"
prettytable-rs = "^0.8"
once_cell = "1.10.0"
num-bigint = "0.4"
phf = { version = "0.10", default-features = false }
rpassword = "6.0"
magic-crypt = "3.1.10"
reqwest = "0.11.11"
tracing = { version = "0.1", features = [ "log" ] }
tracing-subscriber = { version = "0.3", features = [ "registry", "env-filter" ] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
# anyhow = "1.0.59"
anyhow = { version = "1.0", default-features = false }


[build-dependencies]
phf_codegen = "0.10.0"
walkdir = "2"
