[package]
name = "mfm"
version = "0.1.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rustc-hex = "2.1"
tokio = { version = "1.0", features = ["full"] }
# TODO: upgrade and use as: https://github.com/graphprotocol/solidity-bindgen/blob/master/solidity-bindgen/src/secrets.rs
secp256k1 =  "0.21.3" # this version is a dependency for web3
web3 = { version = "0.18.0" }
futures = "0.3.21"
prettytable-rs = "0.9"
once_cell = "1.10.0"
phf = { version = "0.11", default-features = false }
rpassword = "7.0"
# TODO: review the use of this lib to encryption, https://cheatsheetseries.owasp.org/cheatsheets/Password_Storage_Cheat_Sheet.html
magic-crypt = "3.1.10"
reqwest = "0.11.11"
tracing = { version = "0.1", features = [ "log" ] }
tracing-subscriber = { version = "0.3", features = [ "registry", "env-filter" ] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
anyhow = { version = "1.0", default-features = false }
hex = "0.4.3"
thiserror = "1.0.33"
bigdecimal = { version = "0.3.0", features = ["serde"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
zeroize = "1.5.7"
orion = "0.17.2"



[build-dependencies]
phf_codegen = "0.11.1"
walkdir = "2"
