[package]
name = "mfm"
version = "0.1.29"
edition = "2021"

[dependencies]
serde_yaml = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", features = [ "log" ] }
tracing-subscriber = { version = "0.3", features = [ "registry", "env-filter" ] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

